@@ -77,6 +77,8 @@ Feature Additions:
  -- Added no_name attribute flag to suppress name on oattribute emits
     (Issue 220).
  -- Added /no_name switch to @verb (Issue 221).
+ -- Disallow negative charge for channels (Issue 222).  Found by
+    Alierak.
 
 
 Bug Fixes:
